Fixed height for carousel on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -97,4 +97,9 @@ main #hero img {
     align-self: center;
     width: 140%;
   }
+
+  .carousel {
+    height: 50vh;
+    margin: 0;
+  }
 }
